@@ -1,5 +1,9 @@
 *SVN*
 
+* Ping each SSH connection every 1s during command processing so that long-running commands don't cause the connection to timeout.
+
+* Add a 0.01s sleep during the command loop so that the CPU doesn't go ballistic while ST is doing its thing.
+
 * Add :restart_via variable for specifying whether restart ought to use :sudo (default, use sudo)
 
 * Use SFTP for file transfers (if available).
